# multi-agent-brief-workflow

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HERMES.md  README.md  README.zh-CN.md  README_en.md  onboarding_ai_agent_weekly.json  opencode.jsonc  pyproject.toml  reasonix.toml
.agents/: AGENTS.md
.claude/agents/: analyst.md  auditor.md  claim-ledger.md  draft-audit-harness.md  editor.md  final-quality-harness.md  formatter.md  market-competitor-analyst.md  market-competitor-auditor.md  market-competitor-planner.md  orchestrator.md  rendered-output-harness.md  scout.md  screener.md  source-planner.md  source-provider.md
.claude/commands/: briefloop.md  capability.md  generate-brief.md  init-brief.md  mabw.md
.codex/agents/: analyst.toml  auditor.toml  claim-ledger.toml  (+13 more)
.githooks/: pre-push
.github/: pull_request_template.md
Formula/: multi-agent-brief.rb
ai_agent_weekly/: .gitignore  competitor_universe.yaml  config.yaml  profile.yaml  source_candidates.yaml  sources.yaml
configs/: agent_roles.yaml  artifact_contracts.yaml  default.yaml  orchestrator_contract.yaml  stage_specs.yaml  terminology.yaml
docs/: MIGRATION.zh-CN.md  README.md  agent-collaboration.md  agent-contract.md  agent-dev-guide.zh-CN.md  agent-dev-prompt.zh-CN.md  architecture-memo-content-control-decoupling-2026-06-11.md  architecture-memo-reference-run-post-mortem-2026-06-11.md  architecture-status.md  architecture-status.zh-CN.md  architecture.md  architecture.zh-CN.md  brief-loop-engineering.md  briefloop-architecture-reference-v0.3.0.md  briefloop-naming.md  claude-code-quickstart.md  claude-code-workflow.md  control-surfaces.md  control-surfaces.zh-CN.md  design-note-preference-taste-governance-2026-06-11.md  evaluation-cases.md  experiments-080.md  features.md  features.zh-CN.md  feishu-integration.md  github-project.md  golden-path.md  golden-path.zh-CN.md  harness.md  harness_matrix.md  impl-plan-v0.4.0.md  impl-plan-v0.5.0.md  impl-plan-v0.5.5-hermes-adapter.zh-CN.md  impl-plan-v0.6-v0.7-quality-harness.zh-CN.md  init-wizard-design.md  launch-validation.md  launch-validation.zh-CN.md  mabw-architecture-reference-v0.1.1.md  mabw-architecture-reference-v0.1.2.md  mabw-architecture-reference-v0.1.3-related-work.md  (+22 more)
scripts/: bump_version.py  check_briefloop_skill_freshness.py  check_product_baseline.py  check_public_safety.py  check_readme_updated.py  check_release_consistency.py  check_runtime_asset_parity.py  check_skill_contract.py  check_terms.py  check_version_consistency.py  gen_features_doc.py  generate_agent_configs.py  install.ps1  install.sh  public_safe_scan.py  release.sh  setup.ps1  setup.sh
tests/: test_069_e2e_stabilization.py  test_agent_config_generation.py  test_agent_onboarding_docs.py  test_analysis_blocks.py  test_audit_bugfixes.py  test_auditor_interface.py  test_b01_final_output_audit.py  test_b0304_url_source_model.py  test_b1416_date_numeric.py  test_brave_backend.py  test_briefloop_operator_skill.py  test_briefloop_skill_freshness.py  test_capabilities.py  test_case_applicability.py  test_claim_ledger.py  test_claim_support_matrix_policy.py  test_cli.py  test_config_contract.py  test_config_language_compat.py  test_contract_registry.py  test_contracts.py  test_control_timing.py  test_controls_switchboard.py  test_deliver_commands.py  test_deterministic_audit.py  test_docx_output.py  test_editor_cleanup.py  test_evaluation_cases.py  test_evidence_extract_pack.py  test_experiment_080_commands.py  test_experiment_080_schemas.py  test_feedback_commands.py  test_filing_resolver_provider.py  test_final_quality_audit.py  test_finalize_delivery_gate.py  test_firecrawl_backend.py  test_formatter_docx_metadata.py  test_generator_boundaries.py  test_guidance_manifestation.py  test_hermes_adapter.py  (+59 more)
(+369 files in other folders)
