[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-brief-workflow"
version = "0.5.7"
description = "Source-grounded, audit-ready multi-agent workflow for business and research briefs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "multi-agent-brief-workflow contributors"}
]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
docx = [
  "python-docx>=1.0.0",
]
dev = [
  "pytest>=8.0",
  "python-docx>=1.0.0",
]

[project.scripts]
multi-agent-brief = "multi_agent_brief.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
