[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-brief-workflow"
version = "0.9.0"
description = "Source-grounded, audit-ready multi-agent workflow for business and research briefs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "multi-agent-brief-workflow contributors"}
]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
docx = [
  "python-docx>=1.0.0",
]
dev = [
  "pytest>=8.0",
  "python-docx>=1.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
multi-agent-brief = "multi_agent_brief.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multi_agent_brief = [
  "configs/*.yaml",
  "configs/policy_packs/*.yaml",
  "evaluation_cases/fixtures/*.yaml",
  "evaluation_cases/fixtures/cases/*/workspace/*.yaml",
  "evaluation_cases/fixtures/cases/*/workspace/*.md",
  "evaluation_cases/fixtures/cases/*/workspace/improvement/*.jsonl",
  "evaluation_cases/fixtures/cases/*/workspace/improvement/*.md",
  "evaluation_cases/fixtures/cases/*/workspace/input/*.md",
  "evaluation_cases/fixtures/cases/*/workspace/output/*.md",
  "evaluation_cases/fixtures/cases/*/workspace/output/intermediate/*.json",
  "evaluation_cases/fixtures/cases/*/workspace/output/intermediate/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
